@@ -1,5 +1,11 @@
 $Id$
 
+2012-12-11  Stanislav Brabec  <sbrabec@suse.cz>
+
+	* smartd.initd.in: SUSE: Added sysconfig options to disable
+	persistent state writes, attribute log and set arbitrary smartd
+	options.
+
 2012-12-03  Christian Franke  <franke@computer.org>
 
 	Avoid usage of strcpy(), strcat(), sprintf().
